# python-wordpuzzle

./: .flake8  .gitignore  .gitlab-ci.yml  GLOSSARY.md  Makefile  README.md  dictionary  main.py  pyproject.toml  requirements.txt  wordpuzzle.code-workspace  wordpuzzle.py
.github/workflows/: main.yml  python.yaml  pythonapp.yml
lib/: filters.py
tests/: test_architecture.py  test_wordpuzzle.py  testwordpuzzle.py
utils/: filters.py
wordpuzzle/: wordpuzzle.py
